# service/openapi.yml
@@ -8,14 +8,14 @@ servers:
     description: LibreChat API server
 
 security:
-  - ApiKeyAuth: []
+  - BearerAuth: []
 
 components:
   securitySchemes:
-    ApiKeyAuth:
-      type: apiKey
-      in: header
-      name: x-api-key
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 
   schemas:
     FileRef:
